[gd_scene load_steps=2 format=2]

[ext_resource path="res://FleaShop.gd" type="Script" id=1]

[node name="FleaShop" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SexLabel" type="Label" parent="."]
margin_top = 293.0
margin_bottom = 307.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_right = 84.0
margin_bottom = 600.0

[node name="SizeLabel" type="Label" parent="VBoxContainer"]
margin_right = 64.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 32.0
text = "size (mm)"

[node name="PriceLabel" type="Label" parent="."]
margin_left = 104.0
margin_top = 293.0
margin_right = 104.0
margin_bottom = 307.0

[node name="Button" type="Button" parent="."]
margin_left = 124.0
margin_right = 160.0
margin_bottom = 600.0
text = "Buy"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
